src/bindings.rs

extern "C" {
    pub fn __infl() -> u128;
}
extern "C" {
    pub fn __nan() -> f32;
}
extern "C" {
    pub fn __exp10f(arg1: f32) -> f32;
}
extern "C" {
    pub fn __exp10(arg1: f64) -> f64;
}
extern "C" {
    pub fn __cospif(arg1: f32) -> f32;
}
extern "C" {
    pub fn __cospi(arg1: f64) -> f64;
}
extern "C" {
    pub fn __sinpif(arg1: f32) -> f32;
}
extern "C" {
    pub fn __sinpi(arg1: f64) -> f64;
}
extern "C" {
    pub fn __tanpif(arg1: f32) -> f32;
}
extern "C" {
    pub fn __tanpi(arg1: f64) -> f64;
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct __float2 {
    pub __sinval: f32,
    pub __cosval: f32,
}
#[test]
fn bindgen_test_layout___float2() {
    assert_eq!(
        ::std::mem::size_of::<__float2>(),
        8usize,
        concat!("Size of: ", stringify!(__float2))
    );
    assert_eq!(
        ::std::mem::align_of::<__float2>(),
        4usize,
        concat!("Alignment of ", stringify!(__float2))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<__float2>())).__sinval as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(__float2),
            "::",
            stringify!(__sinval)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<__float2>())).__cosval as *const _ as usize },
        4usize,
        concat!(
            "Offset of field: ",
            stringify!(__float2),
            "::",
            stringify!(__cosval)
        )
    );
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct __double2 {
    pub __sinval: f64,
    pub __cosval: f64,
}
#[test]
fn bindgen_test_layout___double2() {
    assert_eq!(
        ::std::mem::size_of::<__double2>(),
        16usize,
        concat!("Size of: ", stringify!(__double2))
    );
    assert_eq!(
        ::std::mem::align_of::<__double2>(),
        8usize,
        concat!("Alignment of ", stringify!(__double2))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<__double2>())).__sinval as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(__double2),
            "::",
            stringify!(__sinval)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<__double2>())).__cosval as *const _ as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(__double2),
            "::",
            stringify!(__cosval)
        )
    );
}
extern "C" {
    pub fn __sincosf_stret(arg1: f32) -> __float2;
}
extern "C" {
    pub fn __sincos_stret(arg1: f64) -> __double2;
}
extern "C" {
    pub fn __sincospif_stret(arg1: f32) -> __float2;
}
extern "C" {
    pub fn __sincospi_stret(arg1: f64) -> __double2;
}
extern "C" {
    pub fn j0(arg1: f64) -> f64;
}
extern "C" {
    pub fn j1(arg1: f64) -> f64;
}
extern "C" {
    pub fn jn(arg1: ::std::os::raw::c_int, arg2: f64) -> f64;
}
extern "C" {
    pub fn y0(arg1: f64) -> f64;
}
extern "C" {
    pub fn y1(arg1: f64) -> f64;
}
extern "C" {
    pub fn yn(arg1: ::std::os::raw::c_int, arg2: f64) -> f64;
}
extern "C" {
    pub fn scalb(arg1: f64, arg2: f64) -> f64;
}
extern "C" {
    pub static mut signgam: ::std::os::raw::c_int;
}
extern "C" {
    pub fn rinttol(arg1: f64) -> ::std::os::raw::c_long;
}
extern "C" {
    pub fn roundtol(arg1: f64) -> ::std::os::raw::c_long;
}
extern "C" {
    pub fn drem(arg1: f64, arg2: f64) -> f64;
}
extern "C" {
    pub fn finite(arg1: f64) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn gamma(arg1: f64) -> f64;
}
extern "C" {
    pub fn significand(arg1: f64) -> f64;
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct exception {
    pub type_: ::std::os::raw::c_int,
    pub name: *mut ::std::os::raw::c_char,
    pub arg1: f64,
    pub arg2: f64,
    pub retval: f64,
}
#[test]
fn bindgen_test_layout_exception() {
    assert_eq!(
        ::std::mem::size_of::<exception>(),
        40usize,
        concat!("Size of: ", stringify!(exception))
    );
    assert_eq!(
        ::std::mem::align_of::<exception>(),
        8usize,
        concat!("Alignment of ", stringify!(exception))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<exception>())).type_ as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(exception),
            "::",
            stringify!(type_)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<exception>())).name as *const _ as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(exception),
            "::",
            stringify!(name)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<exception>())).arg1 as *const _ as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(exception),
            "::",
            stringify!(arg1)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<exception>())).arg2 as *const _ as usize },
        24usize,
        concat!(
            "Offset of field: ",
            stringify!(exception),
            "::",
            stringify!(arg2)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<exception>())).retval as *const _ as usize },
        32usize,
        concat!(
            "Offset of field: ",
            stringify!(exception),
            "::",
            stringify!(retval)
        )
    );
}
extern "C" {
    pub fn iauCal2jd(
        iy: ::std::os::raw::c_int,
        im: ::std::os::raw::c_int,
        id: ::std::os::raw::c_int,
        djm0: *mut f64,
        djm: *mut f64,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn iauEpb(dj1: f64, dj2: f64) -> f64;
}
extern "C" {
    pub fn iauEpb2jd(epb: f64, djm0: *mut f64, djm: *mut f64);
}
extern "C" {
    pub fn iauEpj(dj1: f64, dj2: f64) -> f64;
}
extern "C" {
    pub fn iauEpj2jd(epj: f64, djm0: *mut f64, djm: *mut f64);
}
extern "C" {
    pub fn iauJd2cal(
        dj1: f64,
        dj2: f64,
        iy: *mut ::std::os::raw::c_int,
        im: *mut ::std::os::raw::c_int,
        id: *mut ::std::os::raw::c_int,
        fd: *mut f64,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn iauJdcalf(
        ndp: ::std::os::raw::c_int,
        dj1: f64,
        dj2: f64,
        iymdf: *mut ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn iauAb(pnat: *mut f64, v: *mut f64, s: f64, bm1: f64, ppr: *mut f64);
}
extern "C" {
    pub fn iauApcg(
        date1: f64,
        date2: f64,
        ebpv: *mut [f64; 3usize],
        ehp: *mut f64,
        astrom: *mut iauASTROM,
    );
}
extern "C" {
    pub fn iauApcg13(date1: f64, date2: f64, astrom: *mut iauASTROM);
}
extern "C" {
    pub fn iauApci(
        date1: f64,
        date2: f64,
        ebpv: *mut [f64; 3usize],
        ehp: *mut f64,
        x: f64,
        y: f64,
        s: f64,
        astrom: *mut iauASTROM,
    );
}
extern "C" {
    pub fn iauApci13(date1: f64, date2: f64, astrom: *mut iauASTROM, eo: *mut f64);
}
extern "C" {
    pub fn iauApco(
        date1: f64,
        date2: f64,
        ebpv: *mut [f64; 3usize],
        ehp: *mut f64,
        x: f64,
        y: f64,
        s: f64,
        theta: f64,
        elong: f64,
        phi: f64,
        hm: f64,
        xp: f64,
        yp: f64,
        sp: f64,
        refa: f64,
        refb: f64,
        astrom: *mut iauASTROM,
    );
}
extern "C" {
    pub fn iauApco13(
        utc1: f64,
        utc2: f64,
        dut1: f64,
        elong: f64,
        phi: f64,
        hm: f64,
        xp: f64,
        yp: f64,
        phpa: f64,
        tc: f64,
        rh: f64,
        wl: f64,
        astrom: *mut iauASTROM,
        eo: *mut f64,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn iauApcs(
        date1: f64,
        date2: f64,
        pv: *mut [f64; 3usize],
        ebpv: *mut [f64; 3usize],
        ehp: *mut f64,
        astrom: *mut iauASTROM,
    );
}
extern "C" {
    pub fn iauApcs13(date1: f64, date2: f64, pv: *mut [f64; 3usize], astrom: *mut iauASTROM);
}
extern "C" {
    pub fn iauAper(theta: f64, astrom: *mut iauASTROM);
}
extern "C" {
    pub fn iauAper13(ut11: f64, ut12: f64, astrom: *mut iauASTROM);
}
extern "C" {
    pub fn iauApio(
        sp: f64,
        theta: f64,
        elong: f64,
        phi: f64,
        hm: f64,
        xp: f64,
        yp: f64,
        refa: f64,
        refb: f64,
        astrom: *mut iauASTROM,
    );
}
extern "C" {
    pub fn iauApio13(
        utc1: f64,
        utc2: f64,
        dut1: f64,
        elong: f64,
        phi: f64,
        hm: f64,
        xp: f64,
        yp: f64,
        phpa: f64,
        tc: f64,
        rh: f64,
        wl: f64,
        astrom: *mut iauASTROM,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn iauAtci13(
        rc: f64,
        dc: f64,
        pr: f64,
        pd: f64,
        px: f64,
        rv: f64,
        date1: f64,
        date2: f64,
        ri: *mut f64,
        di: *mut f64,
        eo: *mut f64,
    );
}
extern "C" {
    pub fn iauAtciq(
        rc: f64,
        dc: f64,
        pr: f64,
        pd: f64,
        px: f64,
        rv: f64,
        astrom: *mut iauASTROM,
        ri: *mut f64,
        di: *mut f64,
    );
}
extern "C" {
    pub fn iauAtciqn(
        rc: f64,
        dc: f64,
        pr: f64,
        pd: f64,
        px: f64,
        rv: f64,
        astrom: *mut iauASTROM,
        n: ::std::os::raw::c_int,
        b: *mut iauLDBODY,
        ri: *mut f64,
        di: *mut f64,
    );
}
extern "C" {
    pub fn iauAtciqz(rc: f64, dc: f64, astrom: *mut iauASTROM, ri: *mut f64, di: *mut f64);
}
extern "C" {
    pub fn iauAtco13(
        rc: f64,
        dc: f64,
        pr: f64,
        pd: f64,
        px: f64,
        rv: f64,
        utc1: f64,
        utc2: f64,
        dut1: f64,
        elong: f64,
        phi: f64,
        hm: f64,
        xp: f64,
        yp: f64,
        phpa: f64,
        tc: f64,
        rh: f64,
        wl: f64,
        aob: *mut f64,
        zob: *mut f64,
        hob: *mut f64,
        dob: *mut f64,
        rob: *mut f64,
        eo: *mut f64,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn iauAtic13(
        ri: f64,
        di: f64,
        date1: f64,
        date2: f64,
        rc: *mut f64,
        dc: *mut f64,
        eo: *mut f64,
    );
}
extern "C" {
    pub fn iauAticq(ri: f64, di: f64, astrom: *mut iauASTROM, rc: *mut f64, dc: *mut f64);
}
extern "C" {
    pub fn iauAticqn(
        ri: f64,
        di: f64,
        astrom: *mut iauASTROM,
        n: ::std::os::raw::c_int,
        b: *mut iauLDBODY,
        rc: *mut f64,
        dc: *mut f64,
    );
}
extern "C" {
    pub fn iauAtio13(
        ri: f64,
        di: f64,
        utc1: f64,
        utc2: f64,
        dut1: f64,
        elong: f64,
        phi: f64,
        hm: f64,
        xp: f64,
        yp: f64,
        phpa: f64,
        tc: f64,
        rh: f64,
        wl: f64,
        aob: *mut f64,
        zob: *mut f64,
        hob: *mut f64,
        dob: *mut f64,
        rob: *mut f64,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn iauAtioq(
        ri: f64,
        di: f64,
        astrom: *mut iauASTROM,
        aob: *mut f64,
        zob: *mut f64,
        hob: *mut f64,
        dob: *mut f64,
        rob: *mut f64,
    );
}
extern "C" {
    pub fn iauAtoc13(
        type_: *const ::std::os::raw::c_char,
        ob1: f64,
        ob2: f64,
        utc1: f64,
        utc2: f64,
        dut1: f64,
        elong: f64,
        phi: f64,
        hm: f64,
        xp: f64,
        yp: f64,
        phpa: f64,
        tc: f64,
        rh: f64,
        wl: f64,
        rc: *mut f64,
        dc: *mut f64,
    ) -> ::std::os::raw::c_int;
}
